# Notora

./: Dockerfile.test  Makefile  README.md  docker-compose.test.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/v2/: models.md  services.md
src/notora/: __init__.py
src/notora/enums/: __init__.py
src/notora/persistence/repos/: __init__.py  base.py
src/notora/schemas/: base.py
src/notora/services/: __init__.py  base.py
src/notora/utils/: pagination.py
src/notora/v1/enums/: __init__.py
src/notora/v1/persistence/repos/: base.py
src/notora/v2/models/: base.py
src/notora/v2/repositories/: __init__.py  base.py  factory.py  mixins.py  types.py
src/notora/v2/repositories/mixins/: __init__.py  query.py  write.py
src/notora/v2/schemas/: base.py
src/notora/v2/services/: __init__.py  base.py  config.py  factory.py  mixins.py
src/notora/v2/services/mixins/: __init__.py  accessors.py  create.py  create.pyi  delete.py  executor.py  listing.py  listing.pyi  m2m.py  pagination.py  pagination.pyi  payload.py  retrieval.py  retrieval.pyi  serializer.py  serializer.pyi  update.py  update.pyi  upsert.py  upsert.pyi
tests/factories/: base.py
tests/test_integration/: conftest.py  test_base_repo.py  test_base_service.py
tests/test_integration/mocks/: model.py  repo.py  schema.py  service.py
tests/test_v2/: test_repository_list.py
tests/v2/test_unit/: test_pagination.py  test_query_dsl.py  test_repository_list.py
